nesc-frontend/src/test/resources/integration/programs/bad/bad27/C.nc
/* Invalid implicit equate wires (too many matches). */

configuration C
{
   provides interface I<short>[char dim1, short dim2, long dim3];
}
implementation
{
   components M;
   I = M;
}
